# tine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  requirements.txt
.github/release-notes/: v0.2.7.md  v0.2.9.md
.github/workflows/: ci.yml  release-desktop-app.yml  release-python-wrapper.yml  release.yml
crates/tine-api/: Cargo.toml
crates/tine-api/src/: branch_projection.rs  export.rs  lib.rs  workspace.rs
crates/tine-api/tests/: e2e.rs
crates/tine-app/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.template.json
crates/tine-app/capabilities/: default.json
crates/tine-app/icons/: icon.icns
crates/tine-app/src/: main.rs
crates/tine-catalog/: Cargo.toml
crates/tine-catalog/src/: catalog.rs  lib.rs
crates/tine-cli/: Cargo.toml
crates/tine-cli/src/: client.rs  main.rs
crates/tine-cli/tests/: cli_http.rs
crates/tine-core/: Cargo.toml
crates/tine-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/tine-env/: Cargo.toml
crates/tine-env/src/: environment.rs  lib.rs
crates/tine-graph/: Cargo.toml
crates/tine-graph/src/: graph.rs  lib.rs
crates/tine-kernel/: Cargo.toml
crates/tine-kernel/src/: lib.rs  manager.rs
crates/tine-observe/: Cargo.toml
crates/tine-observe/src/: lib.rs  logging.rs  metrics_setup.rs
crates/tine-scheduler/: Cargo.toml
crates/tine-scheduler/src/: executor.rs  lib.rs
crates/tine-server/: Cargo.toml
crates/tine-server/src/: file_watcher.rs  lib.rs  rest.rs  websocket.rs
examples/: demo.py  seed_ui.py
migrations/: 001_init.sql  002_cache_provenance.sql  003_project_hierarchy.sql  004_experiment_tree_scaffolding.sql  005_execution_targets.sql  006_tree_runtime_state.sql  007_executions_tree_native.sql  008_drop_execution_pipeline_ids.sql  009_cache_runtime_ids.sql  010_cache_cell_scope.sql  011_execution_idempotency.sql
packaging/python/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.py
packaging/python/python/tine/: __init__.py  api_client.py  cli.py  mcp.py  runtime.py  runtime_pins.json
packaging/python/python/tine/ui/: app-helpers.js  app-helpers.test.js  app.js  index.html  style.css
packaging/python/src/: lib.rs
packaging/python/tests/: test_mcp.py  test_packaging.py  test_platform_descriptor.py  test_wrapper.py
scripts/release/: fetch_app_runtime.py  package_runtime_bundle.py  runtime_pins.json  sign_macos_runtime.py  smoke_app.py  smoke_wrapper.py  standalone_python.py  verify_release_artifacts.py  verify_version_alignment.py
ui/: app-helpers.js  app-helpers.test.js  app-lifecycle-scenarios.test.js  app.js  index.html  style.css  style_old.css
