[package]
name = "tine-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tine-core.workspace = true
tine-graph.workspace = true
tine-kernel.workspace = true
tine-catalog.workspace = true
tine-env.workspace = true
tine-scheduler.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
hex.workspace = true
blake3.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
dashmap.workspace = true
async-trait.workspace = true
serial_test = "3"
