[package]
name = "tine-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tine-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tine-core.workspace = true
tine-api.workspace = true
tine-server.workspace = true
tine-observe.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
blake3.workspace = true
chrono.workspace = true
axum.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
