[package]
name = "tine-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tine-core.workspace = true
arrow-ipc.workspace = true
arrow-schema.workspace = true
memmap2.workspace = true
dashmap.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
bytes.workspace = true
