[package]
name = "tine-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tine"
path = "src/main.rs"

[dependencies]
tine-core.workspace = true
tine-api.workspace = true
tine-env.workspace = true
tine-server.workspace = true
tine-observe.workspace = true
clap.workspace = true
figment.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
blake3.workspace = true
chrono.workspace = true
