[package]
name = "tine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
blake3.workspace = true
thiserror.workspace = true
async-trait.workspace = true
bytes.workspace = true
arrow-schema.workspace = true
