[package]
name = "tine-env"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tine-core.workspace = true
tokio.workspace = true
blake3.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
