[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tine"
version = "0.1.0"
description = "Python wrapper and MCP package for the Tine runtime"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.scripts]
tine = "tine.cli:main"
tine-mcp = "tine.mcp:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
tine = ["bin/**/*"]
