[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tine"
version = "0.2.0"
description = "Python wrapper and MCP package for the Tine runtime"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["mcp", "agents", "notebooks", "jupyter", "rust"]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["certifi>=2024.0.0"]

[project.urls]
GitHub = "https://github.com/tinelabs/tine"
Repository = "https://github.com/tinelabs/tine"
Issues = "https://github.com/tinelabs/tine/issues"
Releases = "https://github.com/tinelabs/tine/releases"

[project.scripts]
tine = "tine.cli:main"
tine-mcp = "tine.mcp:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "python"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
tine = ["bin/**/*", "ui/**/*"]
